# nginx-lint

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  renovate.json
.claude/: settings.local.json
.github/workflows/: ci.yml  container-tests.yml  pages.yml  plugins.yml  release.yml
benches/: native_vs_wasm.rs
crates/nginx-lint-common/: Cargo.toml  README.md
crates/nginx-lint-common/src/: config.rs  docs.rs  ignore.rs  lib.rs  linter.rs  nginx_version.rs
crates/nginx-lint-common/src/parser/: error.rs  lexer.rs  mod.rs
crates/nginx-lint-parser/: Cargo.toml  README.md
crates/nginx-lint-parser/src/: ast.rs  context.rs  error.rs  lexer.rs  lexer_rowan.rs  lib.rs  line_index.rs  parser.rs  rowan_to_ast.rs  syntax_kind.rs  wasm.rs
crates/nginx-lint-parser/tests/: compare_parsers.rs  parse_fixtures.rs  parse_fixtures_rowan.rs
crates/nginx-lint-parser/tests/fixtures/test_generated/: 0002_load_balancer.conf  0004_websocket.conf  0006_caching.conf  0013_grpc_proxy.conf  0014_http2_push.conf  0016_basic_auth.conf  0017_ip_restriction.conf  0018_redirects.conf  0022_regex_char_classes.conf  0023_regex_anchors.conf  0024_regex_escapes.conf  0025_regex_alternation.conf  0027_regex_modifiers.conf  0029_regex_rewrites.conf  0030_regex_edge_cases.conf  0033_mail_proxy.conf  0034_fastcgi.conf  0036_scgi.conf  0039_geo.conf  0040_realip.conf  0041_regex_capture_groups.conf  0043_regex_api_versioning.conf  0045_regex_user_agent.conf  0046_regex_query_string.conf  0047_regex_security.conf  0049_regex_media_streaming.conf  0050_regex_microservices.conf  0052_brace_on_newline.conf
crates/nginx-lint-plugin/: Cargo.toml  README.md
crates/nginx-lint-plugin/src/: container_testing.rs  helpers.rs  lib.rs  native.rs  regex_scan.rs  testing.rs  types.rs  wasm_config.rs  wit_guest.rs
crates/nginx-lint-plugin/src/container_testing/: coredns.rs  mod.rs  nginx.rs
demo/: README.md  index.html
docs/: guide.md
examples/: bench_plugin.rs
examples/plugins/example_plugin/: Cargo.toml
plugins/builtin/autoindex_enabled/: Cargo.toml
plugins/builtin/best_practices/try_files_with_proxy/: Cargo.toml
plugins/builtin/best_practices/try_files_with_proxy/examples/: bad.conf  good.conf
plugins/builtin/best_practices/try_files_with_proxy/src/: lib.rs
plugins/builtin/best_practices/try_files_with_proxy/tests/: container_test.rs
plugins/builtin/best_practices/upstream_server_no_resolve/: Cargo.toml
plugins/builtin/best_practices/upstream_server_no_resolve/examples/: bad.conf  good.conf
plugins/builtin/best_practices/upstream_server_no_resolve/src/: lib.rs
plugins/builtin/best_practices/upstream_server_no_resolve/tests/: container_test.rs
plugins/builtin/security/deprecated_ssl_protocol/: Cargo.toml
plugins/builtin/security/deprecated_ssl_protocol/examples/: bad.conf  good.conf
plugins/builtin/security/deprecated_ssl_protocol/src/: lib.rs
plugins/builtin/security/deprecated_ssl_protocol/tests/: container_test.rs
plugins/builtin/security/deprecated_ssl_protocol/tests/fixtures/001_basic/expected/: nginx.conf
plugins/builtin/security/server_tokens_enabled/: Cargo.toml
plugins/builtin/security/server_tokens_enabled/examples/: bad.conf  good.conf
plugins/builtin/security/server_tokens_enabled/src/: lib.rs
plugins/builtin/security/server_tokens_enabled/tests/: container_test.rs
plugins/builtin/security/weak_ssl_ciphers/: Cargo.toml
plugins/builtin/security/weak_ssl_ciphers/examples/: bad.conf  good.conf
plugins/builtin/security/weak_ssl_ciphers/src/: lib.rs
plugins/builtin/security/weak_ssl_ciphers/tests/: container_test.rs
plugins/builtin/security/weak_ssl_ciphers/tests/fixtures/001_weak_cipher/error/: nginx.conf
plugins/builtin/security/weak_ssl_ciphers/tests/fixtures/002_missing_exclusions/error/: nginx.conf
plugins/builtin/style/space_before_semicolon/: Cargo.toml
plugins/builtin/style/space_before_semicolon/src/: lib.rs
plugins/builtin/style/space_before_semicolon/tests/fixtures/001_single_space/error/: nginx.conf
plugins/builtin/style/space_before_semicolon/tests/fixtures/001_single_space/expected/: nginx.conf
plugins/builtin/style/space_before_semicolon/tests/fixtures/003_tab/error/: nginx.conf
plugins/builtin/style/space_before_semicolon/tests/fixtures/004_multiple_lines/expected/: nginx.conf
plugins/builtin/style/trailing_whitespace/: Cargo.toml
plugins/builtin/style/trailing_whitespace/examples/: bad.conf
plugins/builtin/style/trailing_whitespace/src/: lib.rs
plugins/builtin/style/trailing_whitespace/tests/fixtures/001_basic/expected/: nginx.conf
plugins/builtin/syntax/duplicate_directive/: Cargo.toml
plugins/builtin/syntax/duplicate_directive/examples/: bad.conf
plugins/builtin/syntax/duplicate_directive/src/: lib.rs
plugins/builtin/syntax/duplicate_directive/tests/: container_test.rs
plugins/builtin/syntax/duplicate_directive/tests/fixtures/001_basic/error/: nginx.conf
plugins/builtin/syntax/duplicate_directive/tests/fixtures/001_basic/expected/: nginx.conf
plugins/builtin/syntax/invalid_directive_context/: Cargo.toml
plugins/builtin/syntax/invalid_directive_context/examples/: bad.conf  good.conf
plugins/builtin/syntax/invalid_directive_context/src/: lib.rs
plugins/builtin/syntax/invalid_directive_context/tests/: container_test.rs
scripts/: bump-version.sh
src/: cache.rs  config.rs  docs.rs  ignore.rs  include.rs  lib.rs  linter.rs  main.rs  parser.rs  reporter.rs  wasm.rs
src/cli/: config.rs  guide.rs  lint.rs  mod.rs  web.rs  why.rs
src/parser/: ast.rs  lexer.rs  mod.rs
src/plugin/: builtin.rs  component_rule.rs  error.rs  loader.rs  mod.rs  native_builtin.rs  wasm_rule.rs
src/plugin_sdk/: helpers.rs  mod.rs  testing.rs  types.rs
src/reporter/: errorformat.rs  github_actions.rs  json.rs  mod.rs
src/rules/: best_practices.rs  mod.rs  security.rs  style.rs  syntax.rs
src/rules/best_practices/: mod.rs  (+2 more)
tests/: integration_test.rs  known_rules_drift_test.rs  wasm_plugin_test.rs
web/: README.md  index.html  rules.html
wit/: nginx-lint-plugin.wit
(+364 files in other folders)
