[workspace]
members = ["crates/*", "plugins/builtin/security/server_tokens_enabled"]
exclude = [
    "plugins/builtin/security/autoindex_enabled",
    "plugins/builtin/security/deprecated_ssl_protocol",
    "plugins/builtin/security/weak_ssl_ciphers",
    "plugins/builtin/style/*",
    "plugins/builtin/syntax/*",
    "plugins/builtin/best_practices/*",
    "plugins/builtin/deprecation/*",
]
resolver = "2"

[package]
name = "nginx-lint"
version = "0.1.0"
edition = "2024"
description = "A linter for nginx configuration files with WASM plugin support"
license = "MIT"
repository = "https://github.com/walf443/nginx-lint"
authors = ["walf443"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["cli", "builtin-plugins"]
cli = ["clap", "colored", "glob", "rayon"]
wasm = ["wasm-bindgen", "console_error_panic_hook"]
web-server = ["tiny_http"]
# Embed WASM files into the binary (requires web/pkg/ to exist at build time)
web-server-embed-wasm = ["web-server"]
# WASM plugin support for custom lint rules
plugins = ["wasmi"]
# Embed builtin plugins into the binary (requires make build-plugins first)
builtin-plugins = ["plugins"]
# Native plugin support (compile plugins as native Rust instead of WASM)
native-plugins = ["dep:nginx-lint-plugin", "dep:server-tokens-enabled-plugin"]

[dependencies]
# Internal crates
nginx-lint-common = { path = "crates/nginx-lint-common" }

# CLI dependencies
clap = { version = "4", features = ["derive"], optional = true }
colored = { version = "2", optional = true }
glob = { version = "0.3", optional = true }
rayon = { version = "1", optional = true }

# Core dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Web server dependencies
tiny_http = { version = "0.12", optional = true }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# Plugin system dependencies
wasmi = { version = "1.0", optional = true }

# Native plugin dependencies
nginx-lint-plugin = { path = "crates/nginx-lint-plugin", optional = true }
server-tokens-enabled-plugin = { path = "plugins/builtin/security/server_tokens_enabled", optional = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "nginx-lint"
required-features = ["cli"]

[[bench]]
name = "native_vs_wasm"
harness = false
required-features = ["builtin-plugins", "native-plugins"]
