[package]
name = "nginx-lint-common"
version = "0.1.0"
edition = "2024"
description = "Common types and parser for nginx-lint"
license = "MIT"
repository = "https://github.com/walf443/nginx-lint"

[dependencies]
nginx-lint-parser = { path = "../nginx-lint-parser" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
