[package]
name = "nginx-lint-parser"
version = "0.8.1"
edition = "2024"
description = "nginx configuration file parser"
license = "MIT"
repository = "https://github.com/walf443/nginx-lint"
authors = ["walf443"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["dep:wit-bindgen"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
wit-bindgen = { version = "0.53.1", optional = true }
