[package]
name = "nginx-lint-parser"
version = "0.10.4"
edition = "2024"
description = "nginx configuration file parser"
license = "MIT"
repository = "https://github.com/walf443/nginx-lint"
authors = ["walf443"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["dep:wit-bindgen"]

[dependencies]
rowan = "0.16"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
wit-bindgen = { version = "0.55.0", optional = true }
