[package]
name = "nginx-lint-plugin"
version = "0.1.0"
edition = "2024"
description = "Plugin SDK for nginx-lint"
license = "MIT"
repository = "https://github.com/walf443/nginx-lint"
authors = ["walf443"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nginx-lint-common = { path = "../nginx-lint-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

