[package]
name = "nginx-lint-plugin"
version = "0.2.0"
edition = "2024"
description = "Plugin SDK for nginx-lint"
readme = "README.md"
license = "MIT"
repository = "https://github.com/walf443/nginx-lint"
authors = ["walf443"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nginx-lint-common = { path = "../nginx-lint-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optional dependencies for container testing
testcontainers = { version = "0.23", features = ["http_wait"], optional = true }
reqwest = { version = "0.12", optional = true }
tokio = { version = "1", features = ["time"], optional = true }

[features]
container-testing = ["testcontainers", "reqwest", "tokio"]

