[package]
name = "deprecated-ssl-protocol-plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nginx-lint-plugin = { path = "../../../../crates/nginx-lint-plugin" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["wasm-export"]
wasm-export = []
