[package]
name = "space-before-semicolon-plugin"
version = "0.7.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nginx-lint-plugin = { path = "../../../../crates/nginx-lint-plugin" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["wit-export"]
wit-export = ["nginx-lint-plugin/wit-export"]
wasm-export = []
