[package]
name = "space-before-semicolon-plugin"
version = "0.10.1"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nginx-lint-plugin = { path = "../../../../crates/nginx-lint-plugin" }

[features]
default = ["wit-export"]
wit-export = ["nginx-lint-plugin/wit-export"]
