[package]
name = "trailing-whitespace-plugin"
version = "0.8.3"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nginx-lint-plugin = { path = "../../../../crates/nginx-lint-plugin" }

[features]
default = ["wit-export"]
wit-export = ["nginx-lint-plugin/wit-export"]
wasm-export = []
