[package]
name = "duplicate-directive-plugin"
version = "0.6.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nginx-lint-plugin = { path = "../../../../crates/nginx-lint-plugin" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
nginx-lint-plugin = { path = "../../../../crates/nginx-lint-plugin", features = ["container-testing"] }

[features]
default = ["wasm-export"]
wasm-export = []
